--- a/main/package.json
+++ b/main/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.17.3",
     "i": "^0.3.7",
     "jsonwebtoken": "^9.0.2",
+    "kue": "^0.11.6",
     "mongoose": "^7.5.3",
     "multer": "^1.4.5-lts.1",
     "node-sass-middleware": "^1.0.1",
